# ImageProcessor

./: CMakeLists.txt  README.md  binary_io.cpp  binary_io.h  color.h  controller.cpp  controller.h  image_processor.cpp  picture.cpp  picture.h
filters/: abstract_filter.h  abstract_matrix_filter.cpp  abstract_matrix_filter.h  abstract_simple_filter.cpp  abstract_simple_filter.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  gaussian_blur.cpp  gaussian_blur.h  gray_scale_filter.cpp  gray_scale_filter.h  list_of_filters.h  negative_filter.cpp  negative_filter.h  pixelization_effect_filter.cpp  pixelization_effect_filter.h  sharpening_filter.cpp  sharpening_filter.h
parser/: parser.cpp  parser.h
